--- a/style.css
+++ b/style.css
@@ -1,29 +1,235 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-:root{
---marrom: #663A28;
---marromclaro: #CB7F44;
---branco: #ffffff;
+/*background-color: #Ffffff;
+border-radius: 7px;
+padding: 5px;*/
+
+
+
+
+
+
+:root {
+    --marrom: #663A28;
+    --marromclaro: #CB7F44;
+    --branco: #ffffff;
 }
 
-body{
+@font-face {
+    font-family: Bell; 
+    src: url(./fonts/bell-mt-bold.ttf);
+    font-weight: bolder;
+}
+
+@font-face {
+    font-family: Bell;
+    src: url(./fonts/bell-mt.ttf);
+    font-weight: 400;
+}
+
+
+
+
+
+
+
+body {
     background-color: var(--branco);
 }
 
 /* HEADER */
 
-header>div.container-flex{
+header{
+    width: 100%;
+   
+  
+}
+
+header>div.container-flex {
+    
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: var(--marrom);
-    height: 165px;}
+  
+    height: 165px;
+}
 
-    .container-flex{
-        width: 85%;
-        max-width: 1440px;
-    }
+.container-flex {
+    width: 80%;
+    max-width: 100%;
+    margin: 0 auto;
+}
+
+#logo_chata {
+    width: 170px;
+    height: auto;
+}
+
+.links{
+    
+    display: flex;
+    align-items: center;
+    gap: 35px;
+}
+
+.links a{
+    font-size: 25px;
+    color: var(--branco);
+    text-decoration: none;
+}
+
+
+.links a:hover{
+    color: var(--marromclaro);
+    
+}
+
+#icone-barras,
+#icone-x,
+#menu_botao{
+    display: none;
+}
+
+#feitos {
+    margin-bottom: 120px;
+}
+
+#feitos .titulo {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 55px;
+}
+
+#feitos h2 {
+    margin-left: 5px;
+    
+}
+
+.container-cards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+#feitos .card {
+    width: 300px;
+    height: 300px;
+    margin: 20px;
+    padding: 40px 20px;
+    
+ 
+    text-align: center;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#feitos .card h3 {
+    font-size: 24px;
+    margin: 5px 0 30px;
+
+    font-family: "Bell", sans-linear-bold;
+    text-align: center;
+}
+
+#feitos .card p {
+    font-family: "Recursive", sans-linear;
+    font-size: 18px;
+    margin-bottom: 20px;
+    line-height: 1.5;
+}
+
+#feitos .card svg {
+    height: 75px;
+    width: 1000px;
+}
+
+
+#feitos .card:hover h3 {
+    color: var(--marrom-cnl);
+}
+
+#feitos .card:hover svg {
+    fill: var(--marromclaro);
+}
+.banner img{
+    height: 100%;
+    width: 100%;
+}
+.banner{
+   background-image:url(./img/banner\ atelie\ copiar\ 2\ 1.png) ;
+    height: 120vh;
+
+
+    background-repeat: no-repeat;
+    background-position: 0 -10px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+/* ---------------------------------------------- */
+
+
+#sobre {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+    margin-top: 120px;
+    margin-bottom: 120px;
+}
+#sobre img {
+    max-width: 460px;
+    width: 40%;
+    border-radius: 40px;
+    box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
+}
+#sobre h2 {
+    margin-right: 5px;
+}
+
+#sobre h2 {
+    margin-bottom: 0;
+    background-color: var(--marrom);
+    border-radius: 20px;
+    padding: 10px 10px;
+ 
+}
+.titulo h2{
+    color: var(--branco);
+    margin-bottom: 0;
+    background-color: var(--marrom);
+    border-radius: 20px;
+    padding: 10px 18px;
+}
+.titulo span {
+    color: var(--marrom);
+}
+#sobre p{
+    font-size: 20px;
+}
+.sobre{
+    font-size: 30px;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+}
+#parallax {
+    height: 250px;
+
+    background-image: url(./img/parallax.svg);
+
+    background: linear-gradient(rgba(0, 0, 0, 0.26)), url(./img/parallax.svg);
+    background-attachment: fixed;
+    background-size: 30%;
+    margin-bottom: 120px;
+
+}
