--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ padding: 5px;*/
     --marrom: #663A28;
     --marromclaro: #CB7F44;
     --branco: #ffffff;
+    --preto: #333131;
 }
 
 @font-face {
@@ -85,7 +86,7 @@ header>div.container-flex {
 
 .links a:hover{
     color: var(--marromclaro);
-    
+    transition: background-color 500ms;
 }
 
 #icone-barras,
@@ -151,10 +152,6 @@ header>div.container-flex {
 }
 
 
-#feitos .card:hover h3 {
-    color: var(--marrom-cnl);
-}
-
 #feitos .card:hover svg {
     fill: var(--marromclaro);
 }
@@ -173,6 +170,7 @@ header>div.container-flex {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    background-size: cover;
 }
 
 /* ---------------------------------------------- */
@@ -200,7 +198,9 @@ header>div.container-flex {
     margin-bottom: 0;
     background-color: var(--marrom);
     border-radius: 20px;
-    padding: 10px 10px;
+    padding: 2px 2px;
+    margin: 40px;
+
  
 }
 .titulo h2{
@@ -211,10 +211,10 @@ header>div.container-flex {
     padding: 10px 18px;
 }
 .titulo span {
-    color: var(--marrom);
+    color: var(#000000);
 }
 #sobre p{
-    font-size: 20px;
+    font-size: 25px;
 }
 .sobre{
     font-size: 30px;
@@ -223,6 +223,385 @@ header>div.container-flex {
     align-items: center;
 }
 #parallax {
+    height: 250px;
+
+    background-image: url(./img/parallax.svg);
+
+    background: linear-gradient(rgba(0, 0, 0, 0.26)), url(./img/parallax.svg);
+    background-attachment: fixed;
+    background-size: 30%;
+    margin-bottom: 120px;
+
+}
+
+.sobre span{
+color: #ffffff;
+margin-bottom: 0;
+background-color: #663A28;
+border-radius: 20px;
+padding: 10px 18px;
+}
+#feitos-curso {
+    margin-bottom: 120px;
+}
+
+#feitos-curso .titulo {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 55px;
+}
+
+#feitos-curso h2 {
+    margin-left: 5px;
+    
+}
+
+.container-cards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+#feitos-curso .card {
+    width: 300px;
+    height: 500px;
+    margin: 20px;
+    padding: 40px 20px;
+    border-radius: 40px;
+    background-color: #f3f2f2;
+    box-shadow: 0 4px 8px 0 lch(0% 0 0 / 0.2);
+    text-align: center;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#feitos-curso .card h3 {
+    font-size: 24px;
+    margin: 5px 0 30px;
+    color: var(--cnl);
+    font-family: "Recursive", sans-linear-bold;
+    text-align: center;
+}
+
+#feitos-curso .card p {
+    font-family: "Recursive", sans-linear;
+    font-size: 18px;
+    margin-bottom: 20px;
+    line-height: 1.5;
+}
+
+#feitos-curso .card svg {
+    color: var(--verde-cnl);
+    height: 75px;
+}
+
+#feitos-curso .card:hover {
+    border: solid 3px var(--marrom-cnl);
+}
+
+#feitos-curso .card:hover h3 {
+    color: var(--marrom-cnl);
+}
+
+#feitos-curso .card:hover svg {
+    fill: var(--marrom-cnl);
+}
+.botao {
+    height: 40px;
+    width: 60%;
+    background-color: var(--marrom);
+    color: var(--branco);
+    border: none;
+    border-radius: 4px;
+    font-size: 17px;
+    font-family: "Recursive", sans-linear;
+    font-weight: 700;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: background-color 500ms;}
+
+    .botao2 {
+    height: 40px;
+    width: 60%;
+    background-color: var(--marrom);
+    color: var(--branco);
+    border: none;
+    border-radius: 4px;
+    font-size: 17px;
+    font-family: "Recursive", sans-linear;
+    font-weight: 700;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: background-color 500ms;}
+
+    .botao3 {
+    height: 40px;
+    width: 60%;
+    background-color: var(--marrom);
+    color: var(--branco);
+    border: none;
+    border-radius: 4px;
+    font-size: 17px;
+    font-family: "Recursive", sans-linear;
+    font-weight: 700;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: background-color 500ms;}
+    
+    footer {
+    height: 250px;
+  background-color: #000000;
+}
+
+footer img {
+    height: 90px;
+}
+
+footer .container-grid {
+    height: 100%;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.redes-sociais {
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.redes-sociais p {
+    color: var(--branco);
+
+    font-family: "Recursive", sans-linear-bold;
+    font-size: 24px;
+}
+
+.icones-redes {
+    width: 240px;
+
+    display: flex;
+    justify-content: space-between;
+}
+
+.icones-redes a {
+    color: var(--branco);
+
+}
+
+.icones-redes a:hover {
+    color: var(--marromclaro);
+}
+#sobre p {
+    font-size: 20px;
+}
+.container-grid{
+    width: 80vw;
+    max-width: 100%;
+    margin: 0 auto;
+}
+.sobre span{
+color: #ffffff;
+margin-bottom: 0;
+background-color: #663A28;
+border-radius: 20px;
+padding: 10px 18px;
+}
+#feitos-curso svg{
+    width: 150px;
+}
+.botao:hover {
+    background-color: var(--marromclaro);
+
+}
+.botao2:hover {
+    background-color: var(--marromclaro);
+
+}
+.botao3:hover {
+    background-color: var(--marromclaro);
+
+}
+#pao img{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 700px;
+    height: 700px;
+}
+#gustavo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.gustavo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.festival{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    margin: 40px;
+}
+.texto{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 17px;
+}
+
+#contato {
+    text-align: center;
+    padding-bottom: 100px;
+    margin-bottom: 100px;
+}
+
+#contato .titulo {
+    justify-content: center;
+    margin-bottom: 55px;
+}
+
+#contato h2 {
+    margin-left: 5px;
+}
+
+#contato form {
+    width: 90%;
+    max-width: 980px;
+
+    margin: 0 auto;
+    padding: 60px 0;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    border-radius: 40px;
+    background-color: var(--preto);
+    border: solid 3px var(--roxo-pixelv);
+
+    color: var(--branco);
+    font-family: "Recursive", sans-linear;
+    font-size: 17px;
+}
+
+.campo {
+    width: 60%;
+
+    text-align: left;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    margin-bottom: 50px;
+
+}
+
+.campo-descricao {
+    width: 60%;
+
+    text-align: left;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    margin-bottom: 30px;
+}
+
+.campo input {
+    height: 40px;
+
+    color: var(--preto);
+    background-color: var(--branco);
+
+    border: none;
+    border-radius: 4px;
+
+    text-indent: 10px;
+
+    outline: none;
+}
+
+.campo-descricao textarea {
+    color: var(--preto);
+    background-color: var(--branco);
+
+    border: none;
+    border-radius: 4px;
+
+    outline: none;
+
+    padding: 10px;
+
+    resize: none;
+}
+
+.campo-lable,
+.campo-descricao label {
+    margin-bottom: 15px;
+}
+
+.campo input,
+.campo-descricao textarea {
+    font-family: "Recursive", sans-linear;
+    font-size: 17px;
+}
+
+.campo input::placeholder,
+.campo-descricao textarea::placeholder {
+    color: #a0a0a0;
+}
+
+.campo input:focus,
+.campo-descricao textarea:focus {
+    outline: 2px solid var(--branco);
+}
+
+#contato form button {
+    height: 40px;
+    width: 60%;
+
+    background-color: var(--marrom);
+    color: var(--branco);
+
+    border: none;
+    border-radius: 4px;
+
+    font-size: 17px;
+    font-family: "Recursive", sans-linear;
+    font-weight: 700;
+
+    text-transform: uppercase;
+
+    cursor: pointer;
+
+    transition: background-color 500ms;
+}
+
+#contato form button:hover {
+    background-color: var(--);
+
+}
+#contato span{
+    font-family: "Recursive" sans-linear-bold;
+    color: #000000;
+}
+
+#mouse{
+    margin: 140px;
+}
+#parallax2 {
+    margin-top: 100px;
     height: 250px;
 
     background-image: url(./img/parallax.svg);
