--- a/style.css
+++ b/style.css
@@ -383,7 +383,7 @@ footer .container-grid {
 }
 
 .icones-redes {
-    width: 240px;
+    width: 170px;
 
     display: flex;
     justify-content: space-between;
@@ -679,4 +679,41 @@ padding: 10px 18px;
 
 #noticias .card:hover svg {
     fill: var(--marrom-cnl);
+}
+
+/* -------------------- Responsividade --------------- */
+
+@media screen and (max-width: 768px) {
+#sombra {
+        background-color: #9D562390;
+        backdrop-filter: blur(10px);
+        z-index: 1;
+        position: fixed;
+        width: 100vw;
+        height: 100vh;
+        right: -101vw;
+        transition: .5s;
+    }
+
+    #menu_botao {
+        display: block;
+        z-index: 1;
+    }
+
+nav.menu {
+        /* height: 100vh; */
+        width: 200px;
+        padding: 0px 30px;
+
+        flex-direction: column;
+        justify-content: space-around;
+        gap: 15px;
+
+        position: fixed;
+        top: 165px;
+        right: -210px;
+        z-index: 1;
+        transition: .5s;
+    }
+
 }
